--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
   text-align: center;
   background-color: white;
   margin: 0% ;
+  width: 100%;
 }
 @media only screen and (max-width: 768px){
   #root {
