--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -137,10 +137,11 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        width: 100%;
     }
 
     .navbar1 {
-        display: block;
+        display: none;
         position: absolute;
         right: -100px;
     }
@@ -170,6 +171,7 @@
         border-radius: 10px;
         padding: 30px 20px;
         top: 0px;
+        transition: right .5s ease-in-out;
     }
 
     .hidenav .navbar1 {
