--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -144,10 +144,11 @@
         display: none;
         position: absolute;
         right: -100px;
+        transition: right .5s ease-in-out;
     }
 
     .navbar1 img {
-        display: block;
+        display: none;
     }
 
     .logins img {
@@ -173,9 +174,11 @@
         top: 0px;
         transition: right .5s ease-in-out;
     }
-
-    .hidenav .navbar1 {
+     .navshow .navbar1 img {
         display: block;
+    }
+    .hidenav .navbar1 {
+        display: none;
         position: absolute;
         right: -100px;
     }
